2014-01-22  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c: logger_kmsg(): Use open(2) rather than fopen(3) to avoid
	  stealing the console in an container: fopen(3) may not specify
	  O_NOCTTY and Upstart should not own the console (LP: #1263738).

2014-01-17  James Hunt  <james.hunt@ubuntu.com>

	* init/conf.c:
	  - conf_file_serialise(): Handle ConfFile's without an
	    associated JobClass, resulting from an unparseable job configuration
	    file (LP: #1269731).
	  - conf_file_deserialise(): Comments.
	* init/job_class.c: job_class_deserialise_all(): Comments.
	* init/tests/test_conf.c: test_source_reload_file(): Add new tests:
	  - "Invalid .conf file does not stop ConfFile being serialised".
	  - "ConfFile with no JobClass can be deserialised".
	* scripts/pyupstart.py:
	  - JobInstance:destroy(): Whitespace.
	  - SessionInit::reexec(): Add a log message.
	* scripts/tests/test_pyupstart_session_init.py:
	  - TestSessionUpstart: Add pid to ps output.
	  - TestSessionInitReExec::test_session_init_reexec():
	    - Create an invalid job to ensure re-exec can handle it.
	    - Use 'with' for handling re-exec exception.
	* scripts/tests/test_pyupstart_system_init.py:
	  - TestSystemInitReExec::test_pid1_reexec():
	    - Create an invalid job to ensure re-exec can handle it.

2014-01-15  James Hunt  <james.hunt@ubuntu.com>

	* util/telinit.c: upstart_open(): Connect using private socket
	  for systems without D-Bus.

2014-01-08  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5: Explain valid syntax for stanzas
	  accepting a signal (such as 'kill signal').

2014-01-02  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/upstart-udev-bridge.8: Corrected example event
	  name (LP: #1265359).

2013-12-23  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5: Comma-separate and sort SEE ALSO entries.
	* init/man/init.8:
	  - Expand SEE ALSO section (debian bug#732128).
	  - Removed duplicated Job States and Job Lifecycle sections.
